[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mars-nerfstudio"
version = "0.3.4"
description = "The official code repository for the paper: MARS: An Instance-aware, Modular and Realistic Simulator for Autonomous Driving"
readme = "README.md"
license = { text="Apache 2.0" }

requires-python = ">=3.8.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
]

dependencies = [
    "nerfstudio==0.3.4",
    "torchtyping",
    "torch<2.1.0",          # we found the latest version of torch not stable, but feel free to remove this constraint
    "tyro==0.6.0",
]

[project.urls]
"Homeage" = "https://open-air-sun.github.io/mars"

[tool.setuptools.packages.find]
include = ["mars*"]

[project.entry-points.'nerfstudio.method_configs']
mars-vkitti-car-depth-recon-semantic = 'mars.cicai_configs:VKITTI_Recon_Mars_Car_Depth_Semantic'
mars-kitti-car-depth-recon = 'mars.cicai_configs:KITTI_Recon_Mars_Car_Depth'
mars-kitti-car-depth-nvs = 'mars.cicai_configs:KITTI_NVS_Mars_Car_Depth'
mars-vkitti-car-depth-recon = 'mars.cicai_configs:VKITTI_Recon_Mars_Car_Depth'
mars-vkitti-car-depth-nvs = 'mars.cicai_configs:VKITTI_NVS_Mars_Car_Depth'
ablation-background-nerf = 'mars.cicai_configs:Ablation_BG_NeRF'
ablation-background-mip-nerf = 'mars.cicai_configs:Ablation_BG_MipNeRF'
ablation-object-wise-nerf = 'mars.cicai_configs:Ablation_object_wise_NeRF'
ablation-object-wise-mip-nerf = 'mars.cicai_configs:Ablation_object_wise_MipNeRF'
ablation-object-wise-nerfacto = 'mars.cicai_configs:Ablation_object_wise_NeRFacto'
ablation-class-wise-nerf = 'mars.cicai_configs:Ablation_class_wise_NeRF'
ablation-class-wise-mip-nerf = 'mars.cicai_configs:Ablation_class_wise_MipNeRF'
ablation-class-wise-nerfacto = 'mars.cicai_configs:Ablation_class_wise_NeRFacto'
ablation-warmup = 'mars.cicai_configs:Ablation_warmup'
ablation-none-ray-sample = 'mars.cicai_configs:Ablation_none_ray_sample'
ablation-no-depth = 'mars.cicai_configs:Ablation_no_depth'
ablation-no-depth-kitti = 'mars.cicai_configs:Ablation_no_depth_kitti'

[project.entry-points.'nerfstudio.dataparser_configs']
KittiData = 'mars.data.mars_kitti_dataparser:KittiParserSpec'
VKittiData = 'mars.data.mars_vkitti_dataparser:VKittiParserSpec'
